# nlg-playground

./: .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  dataset.py  gen.py  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: ci.yml
bot/: main.py  replybot.py  run.py  settings.py
data/: input-test.txt
model/: dataset.py  freq.py  generate.py  main.py  rnd.py  train.py
tests/: test_dummy.py  test_grouper.py  test_model.py
