[project]
name = "topic-modeling"
version = "0.0.1"

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
nlg-train = "model.main:train"
nlg-generate = "model.main:generate"
nlg-dialogue = "model.main:dialogue"
nlg-dataset = "model.dataset:main"
nlg-raw-data = "model.dataset:download"
oleg = "bot.run:main"
